# gst-interpipe

./: CMakeLists.txt
gst/interpipe/: gstinterpipesink.c  gstinterpipesrc.c  gstplugin.c
